<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/etDistancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:ems="10"
        android:hint="Distância"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvDistancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/strDistancia" />

    <EditText
        android:id="@+id/etLitro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:ems="10"
        android:hint="Preço"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvLitro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/strLitro" />

    <EditText
        android:id="@+id/etKilometro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:ems="10"
        android:hint="Autonomia"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/tvKilometro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/strKilometro" />

    <TextView
        android:id="@+id/tvInformeGasto"
        android:layout_width="match_parent"
        android:textAllCaps="true"
        android:layout_marginTop="48dp"
        android:textSize="16dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/strInformeGasto" />

    <TextView
        android:id="@+id/tvGasto"
        android:layout_width="match_parent"
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:textSize="28dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/strGasto" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="60dp"
        android:textAllCaps="true"
        android:text="@string/strCalcular" />

</LinearLayout>